# rag_os_app_lokal

./: .env.example  .gitattributes  .gitignore  BUILD-PLAN.md  CLAUDE.md  Caddyfile  Makefile  README.md  SPEC.md  docker-compose.docling.yml  docker-compose.localonly.yml  docker-compose.standalone.yml  docker-compose.yml
app/: .dockerignore  Dockerfile  Dockerfile.ingest  appsettings.py  config.py  desktop.py  logger.py  main.py  pyproject.toml  supervisord.conf  worker.py
app/api/: __init__.py  auth_router.py  documents.py  keys.py  maintenance.py  schemas.py  suggest.py  system.py  users.py
app/auth/: __init__.py  dependencies.py  folders.py  keys.py  ratelimit.py  totp.py  users.py
app/backup/: __init__.py  engine.py
app/db/: __init__.py  migrate.py  models.py  session.py
app/doc_ingest/: __init__.py  chunk.py  cli.py  config.py  convert.py  schema.py
app/export/: __init__.py  pdf.py
app/frontend/: index.html  package-lock.json  package.json  preview.html  tailwind.config.ts  vite.config.ts
app/frontend/src/: App.tsx  index.css  main.tsx  preview.tsx
app/frontend/src/api/: auth.ts  client.ts  documents.ts  graph.ts  keys.ts  maintenance.ts  suggest.ts  users.ts
app/frontend/src/components/layout/: AppShell.tsx  Sidebar.tsx  Topbar.tsx
app/frontend/src/hooks/: useAuth.ts
app/frontend/src/pages/: Dashboard.tsx  Documents.tsx  Graph.tsx  Keys.tsx  Login.tsx  Maintenance.tsx  System.tsx  Users.tsx
app/frontend/src/types/: index.ts
app/graph/: __init__.py  analyze.py  build.py  canonical.py  l2.py  refresh.py  reorg.py  store.py
app/ingest/: __init__.py  autotag.py  chunker.py  docling_ingest.py  graph_refs.py  metadata_extract.py  parsers.py  pipeline.py  queue.py  watcher.py
app/maintenance/: __init__.py  duplicate_detection.py  engine.py  tag_consolidation.py
app/mcp_server/: __init__.py  audit.py  oauth.py  oauth_routes.py  ratelimit.py  server.py
app/pipelines/: __init__.py  doc.py  factory.py  publish.py  query.py  reranker.py  store.py  vector_ops.py
app/scripts/: onnx_export_reranker.py
app/services/: folder_suggester.py
docs/: ARCHITECTURE.md  DATENSCHUTZ.md  DEPLOYMENT.md  DISASTER-RECOVERY.md  RAG-OS-MASTERPLAN.md  SANIERUNGSKONZEPT.md  SICHERHEITSKONZEPT.md  VISION.md
scripts/: backup-to-external.sh  bootstrap-vps.sh  generate-secrets.sh  install-offsite-autotrigger.sh  offsite-backup-now.sh  offsite.conf  rag-offsite-handler.sh  restore.sh
spike/: graph_quality.py  m0_lancedb.py
