[project]
name = "sima-rag"
version = "0.1.0"
description = "Lokaler, Docker-freier Normen-/Richtlinien-Wissensspeicher (RAG) mit MCP-Server"
requires-python = ">=3.14"
dependencies = [
    # --- Basis: von BEIDEN Installern gebraucht (Schreiber + Leser) ---
    # Web-Framework + Shell-HTTP
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.17",
    "httpx>=0.27",

    # Config & Logging
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",

    # Lokale App-DB (appstate.sqlite)
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "greenlet>=3.1",

    # Auth (Session-Token / API-Keys)
    "bcrypt>=4.2",
    "python-jose[cryptography]>=3.3",

    # Wissensspeicher + Retrieval (LanceDB + ONNX-Embeddings/Reranker)
    "lancedb>=0.34",
    "fastembed>=0.8",                # dense bge-m3 (ONNX), multilingual/DE
    "onnxruntime>=1.19",             # INT8-ONNX-Inferenz (bge-reranker-v2-m3), CPU
    "transformers>=4.44",            # nur AutoTokenizer (kein torch)
    "numpy>=1.26",
    "pyarrow>=17.0",                 # LanceDB-Schema (explizit)

    # Wissensgraph (Track D): Louvain-Communities; PageRank = eigene numpy-Power-Iteration
    "networkx>=3.2",

    # Datei-Überwachung (Überwachungsordner, PollingObserver)
    "watchdog>=6.0",

    # MCP-Server
    "mcp>=1.1",

    # Native Desktop-Shell (WebView2) + Tray/Toast (M8c)
    "pywebview>=5.3",
    "pystray>=0.19",
    "pillow>=10.4",
    "windows-toasts>=1.1; sys_platform == 'win32'",
]

[project.optional-dependencies]
# --- Nur der SCHREIBER-Installer (Voll): Docling-Ingest + Legacy-Parser-Fallback.
#     Der Leser braucht NICHTS davon (query-only, kein Ingest). ---
writer = [
    "docling>=2.0",
    "torch>=2.4",
    "torchvision>=0.19",
    "rapidocr-onnxruntime>=1.2",     # nur für OCR (aus/born-digital); Py3.14 hat nur 1.2.x
    "pymupdf>=1.24",                 # PDF (legacy)
    "python-docx>=1.1",              # DOCX (legacy)
    "python-magic-bin>=0.4; sys_platform == 'win32'",  # libmagic-DLL für Windows
    "openpyxl>=3.1",                 # XLSX (legacy)
    "beautifulsoup4>=4.12",          # HTML (legacy)
]

# --- Entwicklung / Build ---
dev = [
    "ruff>=0.6",
    "pyinstaller>=6.10",
    "pillow>=10.4",                  # Icon-Generierung (build/make-icon.py)
    "optimum[onnxruntime]>=1.20",    # Reranker-ONNX-Export (build/fetch-models.py)
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["api*", "auth*", "backup*", "db*", "export*", "graph*", "ingest*", "maintenance*", "mcp_server*", "pipelines*", "services*"]

[tool.ruff]
line-length = 100
target-version = "py314"
